# OnvifDemo

./: CMakeLists.txt  OnvifClient.cpp  OnvifClient.h  OnvifDemo.cpp  ReadMe
onvif/: ErrorLog.h  mecevp.cpp  smdevp.cpp  stdsoap2.cpp
